--- a/SDZ_custom/icon/SDZ_DEV.ipynb
+++ b/SDZ_custom/icon/SDZ_DEV.ipynb
@@ -96,9 +96,9 @@
         "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
         "SDZ_Args = \"--share --api --xformers --no-hashing --gradio-queue --theme=dark --cloudflared --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --opt-sdp-attention --disable-console-progressbars --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\" # @param {type:\"string\"}\n",
         "SDZ_Extensions = True\n",
-        "SDZ_ControlNet = True #@param {type:\"boolean\"}\n",
+        "SDZ_ControlNet = True\n",
         "SDZ_Big_Models = True\n",
-        "SDZ_Upscalers = False #@param {type:\"boolean\"}\n",
+        "SDZ_Upscalers = True\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>◨</font>\n",
         "SDZ_Continue = False #@param {type:\"boolean\"}\n",
         "SDZconfigV2=\"--config v2-inference-v.yaml\"\n",
@@ -117,7 +117,7 @@
         "      !git clone --depth 1 https://github.com/AUTOMATIC1111/stable-diffusion-webui SDZ\n",
         "\n",
         "    %cd SDZ\n",
-        "    import os; from concurrent.futures import ThreadPoolExecutor; [executor.submit(os.system, line.strip()) for line in open(SDZ_webui_path+'/''SDZ_Files.txt') for executor in [ThreadPoolExecutor(max_workers=len(open(SDZ_webui_path+'/''SDZ_Files.txt').readlines()))]];\n",
+        "    import os; [os.system(line.strip()) for line in open(SDZ_webui_path+'/''SDZ_Files.txt')]; \n",
         "\n",
         "    clear_output()\n",
         "  print('\u001b[1;96mInstalling SDZ ✓')\n",
@@ -133,28 +133,15 @@
         "  start_install = int(time.time())\n",
         "  print(\"🚀 Unpacking... Please do not stop this process at all cost...\", end='')\n",
         "  with capture.capture_output() as cap:\n",
-        "    # !rm -rf /usr/local/lib/python3.10/dist-packages/scipy /usr/local/lib/python3.10/dist-packages/scipy-*.dist-info/ /usr/local/lib/python3.10/dist-packages/scipy.libs\n",
         "\n",
         "    !wget https://huggingface.co/NoCrypt/fast-repo/resolve/main/ubuntu_deps.zip && unzip ubuntu_deps.zip -d ./deps && dpkg -i ./deps/* && rm -rf ubuntu_deps.zip /content/deps/\n",
-        "    # !apt install liblz4-tool aria2\n",
-        "    # !pip uninstall -q -y huggingface_hub\n",
-        "    # !{'curl -LO https://github.com/BurntSushi/ripgrep/releases/download/13.0.0/ripgrep_13.0.0_amd64.deb && dpkg -i ripgrep_13.0.0_amd64.deb && rm -rf ripgrep_13.0.0_amd64.deb'}\n",
-        "    \n",
-        "    # !aria2c --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content -Z \\\n",
-        "    #   https://huggingface.co/NoCrypt/fast-repo/resolve/main/dep.tar.lz4 \\\n",
-        "    #   https://huggingface.co/NoCrypt/fast-repo/resolve/main/repo.tar.lz4 \\\n",
-        "    #   https://huggingface.co/NoCrypt/fast-repo/resolve/main/cache.tar.lz4\n",
-        "    \n",
-        "    # !aria2c -d /content -o dep.tar.lz4 --summary-interval=10 -c -x 16 -k 1M -s 16 https://huggingface.co/NoCrypt/fast-repo/resolve/main/dep.tar.lz4\n",
-        "    # !aria2c -d /content -o repo.tar.lz4 --summary-interval=10 -c -x 16 -k 1M -s 16 https://huggingface.co/NoCrypt/fast-repo/resolve/main/repo.tar.lz4\n",
-        "    # !aria2c -d /content -o cache.tar.lz4 --summary-interval=10 -c -x 16 -k 1M -s 16 https://huggingface.co/NoCrypt/fast-repo/resolve/main/cache.tar.lz4\n",
+        "\n",
         "    if stable_build:\n",
         "      !echo -e \"https://huggingface.co/NoCrypt/fast-repo/resolve/90539f99b909f358ac3d8bc29a1be3e70db78a95/dep.tar.lz4\\n\\tout=dep.tar.lz4\\nhttps://huggingface.co/NoCrypt/fast-repo/resolve/main/repo.tar.lz4\\n\\tout=repo.tar.lz4\\nhttps://huggingface.co/NoCrypt/fast-repo/resolve/90539f99b909f358ac3d8bc29a1be3e70db78a95/cache.tar.lz4\\n\\tout=cache.tar.lz4\\n\" \\\n",
         "        | aria2c -i- -j5 -x16 -s16 -k1M -c \n",
         "    else:\n",
         "      !echo -e \"https://huggingface.co/NoCrypt/fast-repo/resolve/main/dep.tar.lz4\\n\\tout=dep.tar.lz4\\nhttps://huggingface.co/NoCrypt/fast-repo/resolve/main/repo.tar.lz4\\n\\tout=repo.tar.lz4\\nhttps://huggingface.co/NoCrypt/fast-repo/resolve/main/cache.tar.lz4\\n\\tout=cache.tar.lz4\\n\" \\\n",
         "        | aria2c -i- -j5 -x16 -s16 -k1M -c \n",
-        "    \n",
         "    \n",
         "    !tar -xI lz4 -f dep.tar.lz4 --overwrite-dir --directory=/usr/local/lib/python3.10/dist-packages/ #(manual dir)\n",
         "    !tar -xI lz4 -f repo.tar.lz4 --directory=/ #/content/sdw/ (auto dir)\n",
@@ -170,11 +157,10 @@
         "    del cap\n",
         "  if not os.path.exists(hypernetworks_dir):\n",
         "    os.makedirs(hypernetworks_dir)\n",
-        "  # if not 'T4' in gpu_name:  # [For colab makers out there, facebook's xformers pypi already support almost all gpu now]\n",
-        "  #   !pip uninstall -y xformers\n",
+        "\n",
         "  install_time = timedelta(seconds=time.time()-start_install)\n",
         "  print(\"\\r Finished unpacking. Took\",\"%02d:%02d:%02d ⚡\\n\" % (install_time.seconds / 3600, (install_time.seconds / 60) % 60, install_time.seconds % 60), end='', flush=True)\n",
-        "  # Colab 🤝 Gradio (Colab timer integration for gradio)\n",
+        "\n",
         "  !echo -n {start_colab} > /content/SDZ/static/colabTimer.txt\n",
         "  print(\" Colab timer integration complete! You can see your colab time inside webui.\")\n",
         "\n",
@@ -184,19 +170,6 @@
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
         "\n",
-        "#  import os\n",
-        "#  from google.colab.output import eval_js\n",
-        "#  os.environ['colab_url'] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
-        "#  %env TF_CPP_MIN_LOG_LEVEL=1\n",
-        "#  !apt -y update -qq\n",
-        "#  !wget http://launchpadlibrarian.net/367274644/libgoogle-perftools-dev_2.5-2.2ubuntu3_amd64.deb\n",
-        "#  !wget https://launchpad.net/ubuntu/+source/google-perftools/2.5-2.2ubuntu3/+build/14795286/+files/google-perftools_2.5-2.2ubuntu3_all.deb\n",
-        "#  !wget https://launchpad.net/ubuntu/+source/google-perftools/2.5-2.2ubuntu3/+build/14795286/+files/libtcmalloc-minimal4_2.5-2.2ubuntu3_amd64.deb\n",
-        "#  !wget https://launchpad.net/ubuntu/+source/google-perftools/2.5-2.2ubuntu3/+build/14795286/+files/libgoogle-perftools4_2.5-2.2ubuntu3_amd64.deb\n",
-        "#  !apt install -qq libunwind8-dev\n",
-        "#  !dpkg -i *.deb\n",
-        "#  %env LD_PRELOAD=libtcmalloc.so\n",
-        "#  !rm *.deb\n",
         "  !pip install svglib\n",
         "  !sudo apt-get install libcairo2-dev\n",
         "  !pip install ImageReward\n",
@@ -204,16 +177,8 @@
         "  !pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
         "  !pip install -q xformers==0.0.18 triton==2.0.0 -U\n",
         "  !pip install gradio\n",
-        "  #!pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 torchtext==0.14.1 torchaudio==0.13.1 torchdata==0.5.1 --extra-index-url https://download.pytorch.org/whl/cu117\n",
-        "  #!pip install fastapi\n",
-        "  #!pip install triton\n",
-        "  #!git clone https://github.com/bytedance/Next-ViT.git externals/Next_ViT\n",
-        "  !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
         "\n",
-        "  #%cd models/Stable-diffusion\n",
-        "  #if not os.path.exists('/usr/local/lib/python3.8/dist-packages/open_clip'):\n",
-        "    #!pip install xformers==0.0.16rc425\n",
-        "    #!pip install open-clip-torch\n",
+        "  !wget -N https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
         "\n",
         "# SDZ_Models\n",
         "  os.chdir(SDZ_webui_path)\n",
@@ -373,9 +338,7 @@
         "    %cd extensions\n",
         "    !git clone https://github.com/Mikubill/sd-webui-controlnet.git\n",
         "    #!git clone https://github.com/crucible-ai/sd-webui-controlnet.git\n",
-        "    #!sed -i 's/max_models = shared.opts.data.get(\"control_net_max_models_num\", 1)/max_models = shared.opts.data.get(\"control_net_max_models_num\", 4)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
-        "    #!sed -i 's/1, \"Multi ControlNet/4, \"Multi ControlNet/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
-        "    #!sed -i 's/False, \"Allow other script to control this extension/True, \"Allow other script to control this extension/' $SDZ_install'/stable-diffusion-webui/extensions/sd-webui-controlnet/scripts/controlnet.py'\n",
+        "    \n",
         "    %cd sd-webui-controlnet/models\n",
         "    import os; from concurrent.futures import ThreadPoolExecutor; [executor.submit(os.system, line.strip()) for line in open(SDZ_webui_path+'/''SDZ_ControlNet.txt') for executor in [ThreadPoolExecutor(max_workers=len(open(SDZ_webui_path+'/''SDZ_ControlNet.txt').readlines()))]];\n",
         "    !cp cldm_v15.yaml cldm_v21.yaml {os.path.join(SDZ_webui_path, 'models')}\n",
@@ -383,31 +346,9 @@
         "\n",
         "# SDZ_Upscalers\n",
         "  if SDZ_Upscalers:\n",
-        "    os.chdir(SDZ_webui_path+'/'+'models')\n",
+        "    os.chdir(SDZ_webui_path+'/'+'models/ESRGAN')\n",
+        "    import os; from concurrent.futures import ThreadPoolExecutor; [executor.submit(os.system, line.strip()) for line in open(SDZ_webui_path+'/''SDZ_Upscalers.txt') for executor in [ThreadPoolExecutor(max_workers=len(open(SDZ_webui_path+'/''SDZ_Upscalers.txt').readlines()))]];\n",
         "\n",
-        "    if not os.path.exists('ESRGAN'):\n",
-        "        os.makedirs('ESRGAN')\n",
-        "    with open(SDZ_webui_path+'/'+'Upscalers.txt') as f:\n",
-        "        for i, line in enumerate(f):\n",
-        "            if 1 <= i <= 34:\n",
-        "                link = line.strip()\n",
-        "                os.system('wget --timestamping -P ESRGAN {}'.format(link))\n",
-        "\n",
-        "    if not os.path.exists('GFPGAN'):\n",
-        "        os.makedirs('GFPGAN')\n",
-        "    with open(SDZ_webui_path+'/'+'Upscalers.txt') as f:\n",
-        "        for i, line in enumerate(f):\n",
-        "            if 36 <= i <= 38:\n",
-        "                link = line.strip()\n",
-        "                os.system('wget --timestamping -P GFPGAN {}'.format(link))\n",
-        "\n",
-        "    if not os.path.exists('SwinIR'):\n",
-        "        os.makedirs('SwinIR')\n",
-        "    with open(SDZ_webui_path+'/'+'Upscalers.txt') as f:\n",
-        "        for i, line in enumerate(f):\n",
-        "            if 40 <= i <= 54:\n",
-        "                link = line.strip()\n",
-        "                os.system('wget --timestamping -P SwinIR {}'.format(link))\n",
         "\n",
         "# SDZ_Training\n",
         "  if SDZ_Training == \"New_Dreambooth - Kohya\":\n",
@@ -1488,6 +1429,7 @@
         "\n"
       ],
       "metadata": {
+        "cellView": "form",
         "id": "4A1tPn-TNiYH"
       },
       "execution_count": null,
