--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -171,9 +171,8 @@
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
         "\n",
-        "  !pip install svglib\n",
-        "  !sudo apt-get install libcairo2-dev\n",
-        "  \n",
+        "  #!pip install svglib\n",
+        "  #!sudo apt-get install libcairo2-dev\n",
         "  #!pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
         "  #pip install -q xformers==0.0.18 triton==2.0.0 -U\n",
         "  #!pip install gradio\n",
@@ -190,7 +189,7 @@
         "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-inpaint-fp16.ckpt -O v15inp.ckpt\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.SPYBG_ToolKit5\":\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/1356 -O 15SPYBG_ToolKit5.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/17292 -O 15SPYBG_ToolKit5.safetensors\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.Dreamlike_Diffusion_1\":\n",
         "    !wget --timestamping https://civitai.com/api/download/models/1356 -O 15Dreamlike_Diffusion_1.ckpt\n",
