--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -118,6 +118,7 @@
         "\n",
         "    %cd SDZ\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_Files.txt\n",
+        "    !sed -i '132 a\\,\t\t\t\t\"CLIP_stop_at_last_layers\",\\n \t\t\t\t\"sd_vae\",\\n\t\t\t\t\"img2img_color_correction\"' config.json\n",
         "    import os; [os.system(line.strip()) for line in open(SDZ_webui_path+'/''SDZ_Files.txt')]; \n",
         "\n",
         "    clear_output()\n",
