--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -118,7 +118,6 @@
         "\n",
         "    %cd SDZ\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_Files.txt\n",
-        "    !sed -i '132 a\\,\t\t\t\t\"CLIP_stop_at_last_layers\",\\n \t\t\t\t\"sd_vae\",\\n\t\t\t\t\"img2img_color_correction\"' config.json\n",
         "    import os; [os.system(line.strip()) for line in open(SDZ_webui_path+'/''SDZ_Files.txt')]; \n",
         "\n",
         "    clear_output()\n",
@@ -172,8 +171,8 @@
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
         "\n",
-        "  #!pip install svglib\n",
-        "  #!sudo apt-get install libcairo2-dev\n",
+        "  !pip install svglib\n",
+        "  !sudo apt-get install libcairo2-dev\n",
         "  #!pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
         "  #pip install -q xformers==0.0.18 triton==2.0.0 -U\n",
         "  #!pip install gradio\n",
@@ -184,37 +183,37 @@
         "  os.chdir(SDZ_webui_path)\n",
         "  %cd models/Stable-diffusion\n",
         "  if SDZ_Download_Model == \"V1.5\":\n",
-        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt -O v15.ckpt\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o v15.ckpt $url)\n",
         "    \n",
         "  elif SDZ_Download_Model == \"V1.5.inpaint\":\n",
-        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-inpaint-fp16.ckpt -O v15inp.ckpt\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-inpaint-fp16.ckpt\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o v15inp.ckpt $url)\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.SPYBG_ToolKit5\":\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/17292 -O 15SPYBG_ToolKit5.safetensors\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/17292\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15SPYBG_ToolKit5.safetensors $url)\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.Dreamlike_Diffusion_1\":\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/1356 -O 15Dreamlike_Diffusion_1.ckpt\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/1356\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Dreamlike_Diffusion_1.ckpt $url)\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.Deliberate_2\":\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/15236 -O 15Deliberate_2.safetensors\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/15236\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Deliberate_2.safetensors $url)\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.DreamShaper\":\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/43888 -O 15DreamShaper.safetensors\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/43888\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15DreamShaper.safetensors $url)\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.CyriousMix\":\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/7951 -O 15CyriousMix.safetensors\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/7951\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15CyriousMix.safetensors $url)\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.Protogenx58\":\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/4298 -O 15Protogenx58.safetensors\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/4298\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Protogenx58.safetensors $url)\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.RealisticVision2\":\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/29460 -O 15RealisticVision2.safetensors\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/29460\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15RealisticVision2.safetensors $url)\n",
         "\n",
         "  elif SDZ_Download_Model == \"V2.1\":\n",
-        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt -O v21.ckpt\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o v21.ckpt $url)\n",
         "\n",
         "  elif SDZ_Download_Model == \"V2.1.Perfect_World_V3\":\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/65269 -O 21Perfect_World_3.safetensors\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/65269\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 21Perfect_World_3.safetensors $url)\n",
         "\n",
         "  else:\n",
         "    SDZ_Download_Model == \"\"\n",
