--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -45,7 +45,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://zero01101.github.io/openOutpaint/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/open_out_paint.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://www.painthua.com/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/paint_hua.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/Linaqruf/kohya-trainer\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://zhuyu1997.github.io/open-pose-editor/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </center></font></a> </a> <a href=\"https://www.buymeacoffee.com/wilzamguerrero\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/coffe4.gif?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> \n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://zero01101.github.io/openOutpaint/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/open_out_paint.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://www.painthua.com/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/paint_hua.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/Linaqruf/kohya-trainer\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://zhuyu1997.github.io/open-pose-editor/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </center></font></a>\n",
         "##@markdown <left><font face='Squired Regular' color='#00f3f3' size='4'>Stable Diffusion Z</font>\n",
         "##@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>SDZboton</font> <a href=\"https://pbs.twimg.com/profile_images/1022127431447195649/ASyO_yY3_400x400.jpg\"><font face='Verdana Regular' color='#80ff3' size='4'>SDZboton</font></a>\n",
         "import os\n",
@@ -240,8 +240,46 @@
         "    %cd ..\n",
         "\n",
         "    %cd extensions\n",
-        "    import os; from concurrent.futures import ThreadPoolExecutor; [executor.submit(os.system, line.strip()) for line in open(SDZ_webui_path+'/SDZ_Extensions.txt') if not os.path.exists('sd-webui-controlnet') for executor in [ThreadPoolExecutor(max_workers=len(open(SDZ_webui_path+'/SDZ_Extensions.txt').readlines()))]];\n",
-        "    !sed -i 's/dl_url = gr.Textbox(label=\"Download Url\", interactive=False, value=None)/dl_url = gr.Textbox(label=\"Download Url\", value=None, interactive=True, lines=1)/' $SDZ_install'/stable-diffusion-webui/extensions/sd-civitai-browser/scripts/civitai-api.py'\n",
+        "    !git clone https://github.com/Coyote-A/ultimate-upscale-for-automatic1111.git\n",
+        "    !git clone https://github.com/camenduru/sd-civitai-browser.git\n",
+        "    !git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git\n",
+        "    !git clone https://github.com/AlUlkesh/stable-diffusion-webui-images-browser.git\n",
+        "    !git clone https://github.com/etherealxx/batchlinks-webui.git\n",
+        "    !git clone https://github.com/camenduru/sd-webui-tunnels\n",
+        "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-promptgen.git\n",
+        "    #!git clone https://github.com/imrayya/stable-diffusion-webui-Prompt_Generator.git\n",
+        "    #!git clone https://github.com/canisminor1990/sd-web-ui-kitchen-theme.git\n",
+        "    #!git clone https://github.com/v8hid/infinite-zoom-automatic1111-webui.git\n",
+        "    #!git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+        "    #!git clone https://github.com/fkunn1326/openpose-editor.git\n",
+        "    #!git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git\n",
+        "    #!git clone https://github.com/opparco/stable-diffusion-webui-composable-lora.git\n",
+        "    #!git clone https://github.com/jexom/sd-webui-depth-lib.git\n",
+        "    #!git clone https://github.com/alemelis/sd-webui-ar.git\n",
+        "    #!git clone https://github.com/hnmr293/posex.git\n",
+        "    #!git clone https://github.com/nonnonstop/sd-webui-3d-open-pose-editor.git\n",
+        "    #!git clone https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper.git\n",
+        "    #!git clone https://github.com/Scholar01/sd-webui-mov2mov.git\n",
+        "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-pixelization.git\n",
+        "    #!git clone https://github.com/s9roll7/ebsynth_utility.git\n",
+        "    #!git clone https://github.com/journey-ad/sd-webui-bilingual-localization.git\n",
+        "    #!git clone https://github.com/hako-mikan/sd-webui-supermerger.git\n",
+        "    #!git clone https://github.com/zero01101/openOutpaint-webUI-extension.git\n",
+        "    #!git clone https://github.com/Bing-su/sd-webui-tunnels.git\n",
+        "    #!git clone https://github.com/bbc-mc/sdweb-merge-block-weighted-gui.git\n",
+        "    #!git clone https://github.com/bbc-mc/sdweb-xyplus.git\n",
+        "    #!git clone https://github.com/KohakuBlueleaf/a1111-sd-webui-locon.git\n",
+        "    #!git clone https://github.com/arenatemp/stable-diffusion-webui-model-toolkit.git\n",
+        "    #!git clone https://github.com/fishslot/video_loopback_for_webui.git\n",
+        "    #!git clone https://github.com/mcmonkeyprojects/sd-dynamic-thresholding.git\n",
+        "    #!git clone https://github.com/kohya-ss/sd-webui-additional-networks.git\n",
+        "    #!git clone https://github.com/hnmr293/sd-webui-llul.git\n",
+        "    #!git clone https://github.com/hnmr293/sd-webui-cutoff.git\n",
+        "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-rembg\n",
+        "    #!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface\n",
+        "    !git clone https://github.com/deforum-art/deforum-for-automatic1111-webui  \n",
+        "    #!wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py\n",
+        "    #!git clone https://github.com/CiaraStrawberry/TemporalKit.git\n",
         "    %cd ..\n",
         "\n",
         "# SDZ_ControlNet\n",
