--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -277,7 +277,8 @@
         "    #!git clone https://github.com/hnmr293/sd-webui-cutoff.git\n",
         "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-rembg\n",
         "    #!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface\n",
-        "    !git clone https://github.com/deforum-art/deforum-for-automatic1111-webui  \n",
+        "    !git clone https://github.com/deforum-art/deforum-for-automatic1111-webui.git\n",
+        "    #!git clone https://github.com/zanllp/sd-webui-infinite-image-browsing.git\n",
         "    #!wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py\n",
         "    #!git clone https://github.com/CiaraStrawberry/TemporalKit.git\n",
         "    %cd ..\n",
