--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -246,6 +246,7 @@
         "    !git clone https://github.com/AlUlkesh/stable-diffusion-webui-images-browser.git\n",
         "    !git clone https://github.com/etherealxx/batchlinks-webui.git\n",
         "    !git clone https://github.com/camenduru/sd-webui-tunnels\n",
+        "    #!git clone https://github.com/volotat/SD-CN-Animation.git\n",
         "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-promptgen.git\n",
         "    #!git clone https://github.com/imrayya/stable-diffusion-webui-Prompt_Generator.git\n",
         "    #!git clone https://github.com/canisminor1990/sd-web-ui-kitchen-theme.git\n",
@@ -277,10 +278,11 @@
         "    #!git clone https://github.com/hnmr293/sd-webui-cutoff.git\n",
         "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-rembg\n",
         "    #!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface\n",
-        "    !git clone https://github.com/AIrjen/OneButtonPrompt.git\n",
+        "    #!git clone https://github.com/AIrjen/OneButtonPrompt.git\n",
         "    !git clone https://github.com/Physton/sd-webui-prompt-all-in-one.git\n",
         "    !git clone https://github.com/deforum-art/deforum-for-automatic1111-webui.git\n",
-        "    !git clone https://github.com/zanllp/sd-webui-infinite-image-browsing.git\n",
+        "    #!git clone https://github.com/zanllp/sd-webui-infinite-image-browsing.git\n",
+        "    #!git clone https://github.com/Uminosachi/sd-webui-inpaint-anything.git\n",
         "    #!wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py\n",
         "    #!git clone https://github.com/CiaraStrawberry/TemporalKit.git\n",
         "    %cd ..\n",
