--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -86,7 +86,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\" \n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "SDZ_Download_Model = \"V1.5.SPYBG_ToolKit5\" #@param [\"\", \"V1.5\", \"V1.5.inpaint\", \"V1.5.SPYBG_ToolKit5\", \"V1.5.NeverEndingDream12\", \"V1.5.Dreamlike_Diffusion_1\", \"V1.5.Deliberate_2\", \"V1.5.DreamShaper\", \"V1.5.CyriousMix\", \"V1.5.Protogenx58\", \"V1.5.RealisticVision2\",  \"V2.1\", \"V2.1.Perfect_World_3\"]\n",
+        "SDZ_Download_Model = \"V1.5.SPYBG_ToolKit5\" #@param [\"\", \"V1.5\", \"V1.5.inpaint\", \"V1.5.SPYBG_ToolKit5\", \"V1.5.NeverEndingDream12\", \"V1.5.Dreamlike_Diffusion_1\", \"V1.5.Deliberate_2\", \"V1.5.Reliberate_1\", \"V1.5.Reliberate_inp_1\", \"V1.5.DreamShaper\", \"V1.5.CyriousMix\", \"V1.5.Protogenx58\", \"V1.5.RealisticVision2\",  \"V2.1\", \"V2.1.Perfect_World_3\"]\n",
         "SDZ = \"SDZ\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'SDZ')\n",
         "os.chdir(SDZ_install)\n",
@@ -199,6 +199,12 @@
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.Deliberate_2\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/15236\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Deliberate_2.safetensors $url)\n",
+        "\n",
+        "  elif SDZ_Download_Model == \"V1.5.Reliberate_1\":\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/XpucT/Reliberate/blob/main/Reliberate.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Reliberate_1.safetensors $url)\n",
+        "\n",
+        "  elif SDZ_Download_Model == \"V1.5.Reliberate_inp_1\":\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/XpucT/Reliberate/resolve/main/Reliberate-inpainting.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Reliberate_inp_1.safetensors $url)\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.DreamShaper\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/43888\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15DreamShaper.safetensors $url)\n",
