--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -255,6 +255,7 @@
         "    !git clone https://github.com/AlUlkesh/stable-diffusion-webui-images-browser.git\n",
         "    !git clone https://github.com/etherealxx/batchlinks-webui.git\n",
         "    !git clone https://github.com/camenduru/sd-webui-tunnels\n",
+        "    !git clone https://github.com/yankooliveira/sd-webui-photopea-embed.git\n",
         "    #!git clone https://github.com/volotat/SD-CN-Animation.git\n",
         "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-promptgen.git\n",
         "    #!git clone https://github.com/imrayya/stable-diffusion-webui-Prompt_Generator.git\n",
