--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -302,6 +302,7 @@
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
         "    !git clone https://github.com/Mikubill/sd-webui-controlnet.git\n",
+        "    #!git clone https://github.com/AbdullahAlfaraj/sd-webui-controlnet.git\n",
         "    #!git clone https://github.com/crucible-ai/sd-webui-controlnet.git\n",
         "    \n",
         "    %cd sd-webui-controlnet/models\n",
