--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -134,36 +134,47 @@
         "  start_install = int(time.time())\n",
         "  print(\"🚀 Unpacking... Please do not stop this process at all cost...\", end='')\n",
         "  with capture.capture_output() as cap:\n",
-        "\n",
+        "    !apt install -qq libunwind8-dev\n",
         "    !wget https://huggingface.co/NoCrypt/fast-repo/resolve/main/ubuntu_deps.zip && unzip ubuntu_deps.zip -d ./deps && dpkg -i ./deps/* && rm -rf ubuntu_deps.zip /content/deps/\n",
+        "    # !apt install liblz4-tool aria2\n",
+        "    # !pip uninstall -q -y huggingface_hub\n",
+        "    # !{'curl -LO https://github.com/BurntSushi/ripgrep/releases/download/13.0.0/ripgrep_13.0.0_amd64.deb && dpkg -i ripgrep_13.0.0_amd64.deb && rm -rf ripgrep_13.0.0_amd64.deb'}\n",
+        "    \n",
+        "    # !aria2c --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content -Z \\\n",
+        "    #   https://huggingface.co/NoCrypt/fast-repo/resolve/main/dep.tar.lz4 \\\n",
+        "    #   https://huggingface.co/NoCrypt/fast-repo/resolve/main/repo.tar.lz4 \\\n",
+        "    #   https://huggingface.co/NoCrypt/fast-repo/resolve/main/cache.tar.lz4\n",
+        "    \n",
+        "    # !aria2c -d /content -o dep.tar.lz4 --summary-interval=10 -c -x 16 -k 1M -s 16 https://huggingface.co/NoCrypt/fast-repo/resolve/main/dep.tar.lz4\n",
+        "    # !aria2c -d /content -o repo.tar.lz4 --summary-interval=10 -c -x 16 -k 1M -s 16 https://huggingface.co/NoCrypt/fast-repo/resolve/main/repo.tar.lz4\n",
+        "    # !aria2c -d /content -o cache.tar.lz4 --summary-interval=10 -c -x 16 -k 1M -s 16 https://huggingface.co/NoCrypt/fast-repo/resolve/main/cache.tar.lz4\n",
         "\n",
-        "    if stable_build:\n",
-        "      !echo -e \"https://huggingface.co/NoCrypt/fast-repo/resolve/90539f99b909f358ac3d8bc29a1be3e70db78a95/dep.tar.lz4\\n\\tout=dep.tar.lz4\\nhttps://huggingface.co/NoCrypt/fast-repo/resolve/main/repo.tar.lz4\\n\\tout=repo.tar.lz4\\nhttps://huggingface.co/NoCrypt/fast-repo/resolve/90539f99b909f358ac3d8bc29a1be3e70db78a95/cache.tar.lz4\\n\\tout=cache.tar.lz4\\n\" \\\n",
-        "        | aria2c -i- -j5 -x16 -s16 -k1M -c \n",
-        "    else:\n",
-        "      !echo -e \"https://huggingface.co/NoCrypt/fast-repo/resolve/main/dep.tar.lz4\\n\\tout=dep.tar.lz4\\nhttps://huggingface.co/NoCrypt/fast-repo/resolve/main/repo.tar.lz4\\n\\tout=repo.tar.lz4\\nhttps://huggingface.co/NoCrypt/fast-repo/resolve/main/cache.tar.lz4\\n\\tout=cache.tar.lz4\\n\" \\\n",
-        "        | aria2c -i- -j5 -x16 -s16 -k1M -c \n",
+        "    !echo -e \"https://huggingface.co/NoCrypt/fast-repo/resolve/main/dep.tar.lz4\\n\\tout=dep.tar.lz4\\nhttps://huggingface.co/NoCrypt/fast-repo/resolve/main/repo.tar.lz4\\n\\tout=repo.tar.lz4\\nhttps://huggingface.co/NoCrypt/fast-repo/resolve/main/cache.tar.lz4\\n\\tout=cache.tar.lz4\\n\" \\\n",
+        "      | aria2c -i- -j5 -x16 -s16 -k1M -c \n",
         "    \n",
         "    !tar -xI lz4 -f dep.tar.lz4 --overwrite-dir --directory=/usr/local/lib/python3.10/dist-packages/ #(manual dir)\n",
-        "    !tar -xI lz4 -f repo.tar.lz4 --directory=/ #/content/sdw/ (auto dir)\n",
+        "    !tar -xI lz4 -f repo.tar.lz4 --directory=/ #/content/SDZ/ (auto dir)\n",
         "    !tar -xI lz4 -f cache.tar.lz4 --directory=/ #/root/.cache/huggingface (auto dir)\n",
         "\n",
         "    !rm -rf /content/dep.tar.lz4 /content/repo.tar.lz4 /content/cache.tar.lz4\n",
         "    os.environ[\"SAFETENSORS_FAST_GPU\"]='1'\n",
-        "    !apt -y update -qq\n",
-        "    !apt install -qq libunwind8-dev\n",
-        "    %env LD_PRELOAD=libtcmalloc.so\n",
+        "    os.environ[\"colab_url\"] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
+        "    os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
+        "    os.environ[\"PYTHONWARNINGS\"] = \"ignore\"\n",
         "    os.environ['PYTORCH_CUDA_ALLOC_CONF'] = \"garbage_collection_threshold:0.9,max_split_size_mb:512\"\n",
-        "    !rm /content/SDZ/extensions/sd-webui-tunnels/id_rsa.pub /content/SDZ/extensions/sd-webui-tunnels/id_rsa\n",
+        "    # !apt -y update -qq\n",
+        "    \n",
+        "    %env LD_PRELOAD=libtcmalloc.so\n",
         "    del cap\n",
         "  if not os.path.exists(hypernetworks_dir):\n",
         "    os.makedirs(hypernetworks_dir)\n",
-        "\n",
+        "  # if not 'T4' in gpu_name:  # [For colab makers out there, facebook's xformers pypi already support almost all gpu now]\n",
+        "  #   !pip uninstall -y xformers\n",
         "  install_time = timedelta(seconds=time.time()-start_install)\n",
-        "  print(\"\\r Finished unpacking. Took\",\"%02d:%02d:%02d ⚡\\n\" % (install_time.seconds / 3600, (install_time.seconds / 60) % 60, install_time.seconds % 60), end='', flush=True)\n",
-        "\n",
+        "  print(\"\\r🚀 Finished unpacking. Took\",\"%02d:%02d:%02d ⚡\\n\" % (install_time.seconds / 3600, (install_time.seconds / 60) % 60, install_time.seconds % 60), end='', flush=True)\n",
+        "  # Colab 🤝 Gradio (Colab timer integration for gradio)\n",
         "  !echo -n {start_colab} > /content/SDZ/static/colabTimer.txt\n",
-        "  print(\" Colab timer integration complete! You can see your colab time inside webui.\")\n",
+        "  print(\"🤝 Colab timer integration complete! You can see your colab time inside webui.\")\n",
         "\n",
         "# SDZ_Requirements\n",
         "with capture.capture_output() as cap:\n",
