--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -267,6 +267,8 @@
         "    !git clone https://github.com/etherealxx/batchlinks-webui.git\n",
         "    !git clone https://github.com/camenduru/sd-webui-tunnels\n",
         "    !git clone https://github.com/yankooliveira/sd-webui-photopea-embed.git\n",
+        "    #!git clone https://github.com/dustysys/ddetailer.git\n",
+        "    #!git clone https://github.com/Bing-su/adetailer.git\n",
         "    #!git clone https://github.com/volotat/SD-CN-Animation.git\n",
         "    #!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-promptgen.git\n",
         "    #!git clone https://github.com/imrayya/stable-diffusion-webui-Prompt_Generator.git\n",
